minorFixes